[gd_scene load_steps=14 format=3 uid="uid://dvsd26v8oyj3e"]

[ext_resource type="Script" uid="uid://dfwksbp3g71ho" path="res://Scripts/BenteUno/npc.gd" id="1_f4j7u"]
[ext_resource type="SpriteFrames" uid="uid://dp5ol0c0hg8og" path="res://Assets/Art/Characters/Frames/Juan_Frames.tres" id="2_mowhh"]
[ext_resource type="SpriteFrames" uid="uid://cr6onwakxrxau" path="res://Assets/Art/Characters/Frames/Maria_Frames.tres" id="3_c7i4g"]
[ext_resource type="SpriteFrames" uid="uid://be4gj5kt2lcs7" path="res://Assets/Art/Characters/Frames/Reyna_Frames.tres" id="4_12w4l"]
[ext_resource type="SpriteFrames" uid="uid://c1gg4n6lcd58t" path="res://Assets/Art/Characters/Frames/Tala_Frames.tres" id="5_y5qq7"]
[ext_resource type="SpriteFrames" uid="uid://s82bxwoyvakj" path="res://Assets/Art/Characters/Frames/Carlo_Frames.tres" id="6_nr4t5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bsr7a"]
radius = 11.0
height = 34.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aw3px"]
radius = 12.0
height = 36.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8nvml"]
radius = 71.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_va4ao"]
radius = 12.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vq3ad"]
radius = 12.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6pv74"]
radius = 12.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7du6x"]
radius = 12.0
height = 36.0

[node name="NPCs" type="Node2D"]

[node name="NPC1" type="CharacterBody2D" parent="."]
collision_mask = 3
script = ExtResource("1_f4j7u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="NPC1"]
texture_filter = 1
sprite_frames = ExtResource("2_mowhh")
animation = &"IdleBack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC1"]
shape = SubResource("CapsuleShape2D_bsr7a")

[node name="Timer" type="Timer" parent="NPC1"]

[node name="StatusLabel" type="Label" parent="NPC1"]
offset_right = 40.0
offset_bottom = 23.0

[node name="TagArea" type="Area2D" parent="NPC1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC1/TagArea"]
shape = SubResource("CapsuleShape2D_aw3px")
debug_color = Color(0.878357, 0.000384853, 0.827622, 0.42)

[node name="DetectionArea" type="Area2D" parent="NPC1"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC1/DetectionArea"]
shape = SubResource("CircleShape2D_8nvml")

[node name="FleeArea" type="Area2D" parent="NPC1"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC1/FleeArea"]
shape = SubResource("CircleShape2D_8nvml")

[node name="NPC2" type="CharacterBody2D" parent="."]
collision_mask = 3
script = ExtResource("1_f4j7u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="NPC2"]
texture_filter = 1
sprite_frames = ExtResource("3_c7i4g")
animation = &"WalkBack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC2"]
shape = SubResource("CapsuleShape2D_bsr7a")

[node name="Timer" type="Timer" parent="NPC2"]

[node name="StatusLabel" type="Label" parent="NPC2"]
offset_right = 40.0
offset_bottom = 23.0

[node name="TagArea" type="Area2D" parent="NPC2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC2/TagArea"]
shape = SubResource("CapsuleShape2D_va4ao")
debug_color = Color(0.89017, 0.000256248, 0.793963, 0.42)

[node name="DetectionArea" type="Area2D" parent="NPC2"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC2/DetectionArea"]
shape = SubResource("CircleShape2D_8nvml")

[node name="FleeArea" type="Area2D" parent="NPC2"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC2/FleeArea"]
shape = SubResource("CircleShape2D_8nvml")

[node name="NPC3" type="CharacterBody2D" parent="."]
collision_mask = 3
script = ExtResource("1_f4j7u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC3"]
shape = SubResource("CapsuleShape2D_bsr7a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="NPC3"]
texture_filter = 1
sprite_frames = ExtResource("4_12w4l")
animation = &"WalkBack"

[node name="Timer" type="Timer" parent="NPC3"]

[node name="StatusLabel" type="Label" parent="NPC3"]
offset_right = 40.0
offset_bottom = 23.0

[node name="TagArea" type="Area2D" parent="NPC3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC3/TagArea"]
shape = SubResource("CapsuleShape2D_vq3ad")
debug_color = Color(0.871889, 0.000473992, 0.845103, 0.42)

[node name="DetectionArea" type="Area2D" parent="NPC3"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC3/DetectionArea"]
shape = SubResource("CircleShape2D_8nvml")

[node name="FleeArea" type="Area2D" parent="NPC3"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC3/FleeArea"]
shape = SubResource("CircleShape2D_8nvml")

[node name="NPC4" type="CharacterBody2D" parent="."]
collision_mask = 3
script = ExtResource("1_f4j7u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC4"]
shape = SubResource("CapsuleShape2D_bsr7a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="NPC4"]
texture_filter = 1
sprite_frames = ExtResource("5_y5qq7")
animation = &"WalkBack"

[node name="Timer" type="Timer" parent="NPC4"]

[node name="StatusLabel" type="Label" parent="NPC4"]
offset_right = 40.0
offset_bottom = 23.0

[node name="TagArea" type="Area2D" parent="NPC4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC4/TagArea"]
shape = SubResource("CapsuleShape2D_6pv74")
debug_color = Color(0.925896, 4.06224e-05, 0.674486, 0.42)

[node name="DetectionArea" type="Area2D" parent="NPC4"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC4/DetectionArea"]
shape = SubResource("CircleShape2D_8nvml")

[node name="FleeArea" type="Area2D" parent="NPC4"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC4/FleeArea"]
shape = SubResource("CircleShape2D_8nvml")

[node name="NPC5" type="CharacterBody2D" parent="."]
collision_mask = 3
script = ExtResource("1_f4j7u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC5"]
shape = SubResource("CapsuleShape2D_bsr7a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="NPC5"]
texture_filter = 1
sprite_frames = ExtResource("6_nr4t5")
animation = &"WalkFront"

[node name="Timer" type="Timer" parent="NPC5"]

[node name="StatusLabel" type="Label" parent="NPC5"]
offset_right = 40.0
offset_bottom = 23.0

[node name="TagArea" type="Area2D" parent="NPC5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC5/TagArea"]
shape = SubResource("CapsuleShape2D_7du6x")
debug_color = Color(0.885276, 0.000302454, 0.808196, 0.42)

[node name="DetectionArea" type="Area2D" parent="NPC5"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC5/DetectionArea"]
shape = SubResource("CircleShape2D_8nvml")

[node name="FleeArea" type="Area2D" parent="NPC5"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC5/FleeArea"]
shape = SubResource("CircleShape2D_8nvml")
